 - Fix for SF bug [2164955] DSpace1.5.1(XML) problem with Login to restricted bitstreams
 - Fix for SF bug [2343281] XHTML Head Dissimination Crosswalk exposes provenance info
 - Fix for SF bug [1896225] HTML tags not stripped in statistics display
 - Fix for SF bug [1951859] DSpace Home link style in breadcrumb trail
 - Fix for SF bug [1730606] Restricted Items metadata exposed via OAI

(Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini)
 - [2057378] Hierarchical LDAP support

(Yin Latt)
 - SF bug [1931796] DSpace 1.5 Controlled Vocab (edit-metadata.jsp) not working on first box in twobox
 - SF bug [2137425] DSpace 1.5.1(XMLUI) Wrong dir usage of StatisticsLoader

(Claudia Juergen)
 - [2041754] Feature Request #1896717 Registration notification missing information about instance
 - Patch for SF bugs 1775059 and 2352146 2 Authentications with LoginPage cause connection exhaust
 - Fixed hardcoded metadata language qualifier in DescribeStep to use default.language configuration parameter
 - Fix for SF Bug #2125833 News stored not language dependend (code change in dspace-api-lang googlecode)
 - Fix for SF Bug #2343849 DSQuery invalid check for empty query string
 - Fix for SF Bug #1725817 Error in authorization to submit when you add collection.
   Avoids that groups can be added to themselves.
 - Fix for SF Bug #1968082 SWORD Service Document fails if Collection is untitled
 
(Elliot Metsger)
 - Patch for SF bug #2016130 checksum checker can not retrieve very large bitstream

(Tim Donohue)
 - [2433852] Add File Format Descriptions to XMLUI 1.5.x
 - [2462293] Enable Google Sitemaps for XMLUI

1.5.1 final
===========

(Scott Philips)
- (Scott Phillips) Fixed bug where users could not finish registering nor reset 
  their password because the authentication method signatures were changed.
- Jay Paz (SF#1898241) Additional fixes to patch to enable reuse of methods.