@@ -50,6 +50,7 @@ import org.dspace.core.ConfigurationManager;
 import org.dspace.core.Context;
 import org.dspace.core.LogManager;
 import org.dspace.eperson.EPerson;
+import org.dspace.eperson.Group;
 
 /**
  * A stackable authentication method
@@ -150,11 +151,39 @@ public class PasswordAuthentication
     }
 
     /**
-     * No special groups.
+     * Add authenticated users to the group defined in dspace.cfg by
+     * the password.login.specialgroup key.
      */
     public int[] getSpecialGroups(Context context, HttpServletRequest request)
     {
-        return new int[0];
+        // Prevents anonymous users from being added to this group, and the second check
+		// ensures they are password users
+		try
+		{
+			if (!context.getCurrentUser().getMetadata("password").equals(""))
+			{
+				String groupName = ConfigurationManager.getProperty("password.login.specialgroup");
+				if ((groupName != null) && (!groupName.trim().equals("")))
+				{
+				    Group specialGroup = Group.findByName(context, groupName);
+					if (specialGroup == null)
+					{
+						// Oops - the group isn't there.
+						log.warn(LogManager.getHeader(context,
+								"password_specialgroup",
+								"Group defined in password.login.specialgroup does not exist"));
+						return new int[0];
+					} else
+					{
+						return new int[] { specialGroup.getID() };
+					}
+				}
+			}
+		}
+		catch (Exception e) {
+			// The user is not a password user, so we don't need to worry about them
+		}
+		return new int[0];
     }
 
     /**
