@@ -300,6 +300,15 @@ plugin.sequence.org.dspace.authenticate.AuthenticationMethod = \
 # Example - MIT domain and all .ac.uk domains: @mit.edu, .ac.uk
 # authentication.password.domain.valid = example.com
 
+##### Password users group #####
+
+# If required, a group name can be given here, and all users who log in
+# using the DSpace password system will automatically become members of
+# this group. This is useful if you want a group made up of all internal
+# authenticated users.
+#password.login.specialgroup = group-name
+
+
 #### Example of configuring X.509 authentication
 #### (to use add org.dspace.authenticate.X509Authentication to auth stack above)
 
