@@ -6,6 +6,7 @@
  - Fix for SF bug [1896225] HTML tags not stripped in statistics display
  - Fix for SF bug [1951859] DSpace Home link style in breadcrumb trail
  - Fix for SF bug [1730606] Restricted Items metadata exposed via OAI
+ - Patch for SF feature request [1587270] Implicit group for all registered users
 
 (Stuart Lewis / Chris Yates / Flavio Botelho / Alex Barbieri / Reuben Pasquini)
  - [2057378] Hierarchical LDAP support
